--- a/PersonalPage/personalpagecss.css
+++ b/PersonalPage/personalpagecss.css
@@ -1,3 +1,17 @@
+body {
+    font-family: Arial, sans-serif; 
+}
+
 h1 {
-    background-color: blue
+    color: blue;
+    font-family: Arial, sans-serif;
+  }
+
+  h2, h3 {
+    font-family: Arial, sans-serif;
+  }
+
+  p {
+    font-family: Arial, sans-serif;
+    font-size: 14pt;
   }
