--- a/PersonalPage/personalpagecss.css
+++ b/PersonalPage/personalpagecss.css
@@ -1,17 +1,201 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@100..900&display=swap');
+
+
+
 body {
-    font-family: Arial, sans-serif; 
+  font-family: Inter, sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "slnt" 0;
+  background-color: #DDFBD2;
+  overflow-x: hidden; 
+}
+
+p {
+  font-size: 14pt;
+}
+
+a {
+  text-decoration: none;
+  color: #004173;
+  font-family: Inter, sans-serif;
+  font-size: 14pt;
+}
+
+a:hover {
+color: #00243f;
+text-decoration: underline;
+
+}
+
+.icon {
+width: 20px;
+height: 20px; 
+margin-right: 5px;
+filter: invert(10%) sepia(66%) saturate(6035%) hue-rotate(194deg) brightness(93%) contrast(101%);
+}
+
+.iconblock {
+margin-bottom: 1rem;
+transition: transform .2s;
+}
+
+.iconblock:hover {
+transform: scale(1.02);
+}
+
+.linkbutton {
+  color: white;
+  text-decoration: none;
+}
+
+.linkbutton:hover {
+  color: #abdaff;
+  text-decoration: none;
 }
 
 h1 {
-    color: blue;
-    font-family: Arial, sans-serif;
+
+    color: #004173;
+    font-family: "Anton", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 60px;
+    position: relative;
+    left: 2rem;
   }
+
+  .h-main {
+  top: 1rem;
+  font-size: 200px; 
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: uppercase;
+  line-height: 1.1;
+  position: relative;
+  }
+
+  .myphoto {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+
+
+.mainbutton {
+  position: fixed;
+  top: 200px;
+  right: 20px;
+  width: 16rem;
+  padding: 20px;
+  background-color: #004173;
+  font-size: 30px;
+  color: white;
+  border: 0px;
+  transition: transform .2s;
+}
+
+
+
+.mainbutton:hover {
+  background-color: #00243f;
+  color: white;
+  transform: scale(1.1);
+}
+
+.subheading {
+  width: 60rem;
+  position: relative;
+  left: 2rem;
+  color:#004173;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 18pt;
+}
 
   h2, h3 {
-    font-family: Arial, sans-serif;
+  font-family: "Anton", sans-serif; 
+  color: #004173;  
+  top: 1rem;
+  font-size: 40px;
+  font-weight: 300;
+  left: 2rem;
   }
 
-  p {
-    font-family: Arial, sans-serif;
-    font-size: 14pt;
-  }
+
+.divtwo{
+  position: relative;
+  left: 2rem;
+}
+
+.box {
+  float: left;
+  width: 33%; 
+}
+
+.quote {
+  font-family: "Anton", sans-serif; 
+  color: #004173;  
+  font-size: 46px;
+  position: relative;
+  bottom: 10px;
+}
+
+.divthree{
+  float: left;
+  position: relative;
+  left: 2rem;
+}
+
+/* Portfolio page style */
+
+.portfolio-row {
+  position: relative;
+  left: 2rem;
+  width: 80%;
+  display: table;
+  clear: both;
+}
+
+.portfolio-column {
+  float: left;
+  margin-top: 4rem;
+  width: 50%;
+}
+
+.hover_image {
+  transition: transform .2s;
+}
+
+.hover_image:hover {
+  transform: scale(1.05);
+}
+
+.portfoliobutton {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 16rem;
+  padding: 20px;
+  background-color: #004173;
+  font-size: 30px;
+  color: white;
+  border: 0px;
+  transition: transform .2s;
+}
+
+.portfoliobutton:hover {
+  background-color: #00243f;
+  color: white;
+  transform: scale(1.1);
+}
+
+.backtomain {
+  position: relative;
+  float: left;
+  left: 2rem;
+  top: 2rem;
+}
